Added inserts to db
