# app/docs/swagger.json
@@ -20,14 +20,8 @@
         "/": {
             "get": {
                 "description": "Hello World",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
-                    "General"
+                    "Description"
                 ],
                 "summary": "Hello World",
                 "responses": {
@@ -35,6 +29,24 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controller.HomeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
                         }
                     }
                 }
@@ -113,6 +125,29 @@
                     "Character"
                 ],
                 "summary": "Character List Csv",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "odd or even",
+                        "name": "type",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Quantity of items to retrieve",
+                        "name": "items",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Quantity of items that each worker will read concurrently",
+                        "name": "items_per_worker",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -122,6 +157,14 @@
         }
     },
     "definitions": {
+        "controller.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.HomeResponse": {
             "type": "object",
             "properties": {
